Add fixed yaml spacing to editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -268,3 +268,9 @@ dotnet_naming_style.begins_with_c_.required_prefix = c_
 dotnet_naming_style.begins_with_c_.required_suffix = 
 dotnet_naming_style.begins_with_c_.word_separator = 
 dotnet_naming_style.begins_with_c_.capitalization = pascal_case
+
+[*.{yaml,yml}]
+indent_style = space
+indent_size = 2
+tab_width = 2
+charset = utf-8
